[gd_scene load_steps=11 format=2]

[ext_resource path="res://ASSETS/Fonts/Slackey.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ASSETS/Fonts/tf2build.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ASSETS/Wolf/result_small.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/ResultsScreen/result.png" type="Texture" id=4]
[ext_resource path="res://ASSETS/ResultsScreen/PlayerResultBox.gd" type="Script" id=5]
[ext_resource path="res://ASSETS/Fox/result_small.png" type="Texture" id=6]
[ext_resource path="res://ASSETS/Mario/result_small.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 5
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
extra_spacing_top = 9
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 5
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
extra_spacing_top = 9
font_data = ExtResource( 2 )

[node name="PlayerResultBox" type="MarginContainer"]
margin_right = 958.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
FOX = ExtResource( 6 )
WOLF = ExtResource( 3 )
MARIO = ExtResource( 7 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 958.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )

[node name="PlayerPos" type="MarginContainer" parent="."]
margin_right = 958.0
margin_bottom = 250.0
custom_constants/margin_left = 120

[node name="PlayerPos" type="Label" parent="PlayerPos"]
margin_left = 120.0
margin_right = 258.0
margin_bottom = 250.0
rect_min_size = Vector2( 128, 128 )
size_flags_horizontal = 0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "1st"
valign = 2
uppercase = true

[node name="PlayerIcon" type="MarginContainer" parent="."]
margin_right = 300.0
margin_bottom = 220.0
rect_min_size = Vector2( 300, 220 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = -400
custom_constants/margin_top = 15
custom_constants/margin_left = 400
custom_constants/margin_bottom = -15

[node name="ColorRect" type="ColorRect" parent="PlayerIcon"]
margin_left = 400.0
margin_top = 15.0
margin_right = 700.0
margin_bottom = 235.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="Icon and Text" type="VBoxContainer" parent="PlayerIcon"]
margin_left = 400.0
margin_top = 15.0
margin_right = 700.0
margin_bottom = 235.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="PlayerIcon/Icon and Text"]
margin_right = 300.0
margin_bottom = 181.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
stretch_mode = 7

[node name="Name" type="Label" parent="PlayerIcon/Icon and Text"]
margin_top = 180.0
margin_right = 300.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
text = "scout"
align = 1
valign = 1
autowrap = true

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_right = 958.0
margin_bottom = 250.0
custom_constants/margin_right = 50
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerNo" type="Label" parent="MarginContainer2"]
margin_left = 767.0
margin_top = 60.0
margin_right = 908.0
margin_bottom = 189.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 8
custom_fonts/font = SubResource( 3 )
custom_constants/line_spacing = 0
text = "p2"
align = 2
uppercase = true
__meta__ = {
"_editor_description_": ""
}
